--- a/Java-Advanced/jsp_web_03/WebContent/sessionLogin.html
+++ b/Java-Advanced/jsp_web_03/WebContent/sessionLogin.html
@@ -6,28 +6,24 @@
 </head>
 <body>
 
-<form action="sessionLogin.jsp" method="post">
+<form action="feedadd.jsp" method="post">
+      <table align=center>
+         <tr height=40>
+            <td colspan=2 align=center><b>작성된 방명록 리스트</b></td>
+         </tr>
 
-<table align="center">
-
-<tr>
-<td>아이디</td>
-<td><input type="text" name="id" placeholder="아이디를 입력하세요." required></td>
-</tr>
-
-<tr>
-<td>비밀번호</td>
-<td><input type="password" name="password"></td>
-</tr>
-
-<tr>
-<td colspan=2 align=center>
-<input type="submit" value="로그인하기">
-</td>
-</tr>
-
-</table>
-</form>
-
+         <tr>
+            <td>작성자 이름</td>
+            <td><input type="text" name="name" placeholder="이름을 입력하세요" required></td>
+         </tr>
+         <tr>
+            <td>방명록 내용</td>
+            <td><input type="text" name="contens"></td>
+         </tr>
+         <tr>
+            <td colspan=2 align="center"><input type="submit" value="방명록 등록"></td>
+         </tr>
+      </table>
+   </form>
 </body>
 </html>
